[package]
name = "postcss-px2rem"
version = "0.1.0"
authors = ["the postcss-rs authors"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.8.0"
recursive-parser = { git = "https://github.com/postcss-rs/postcss-rs" }
regex = "1.5.4"
smol_str = "0.1.21"

[dev-dependencies]
similar-asserts = "1.1.0"
unindent = "0.1.7"
